--- a/projects/00-hola-mundo/src/App.css
+++ b/projects/00-hola-mundo/src/App.css
@@ -4,13 +4,14 @@
     color: #fff;
     font-size: rem;
     justify-content: space-between;
-    font-size: 0.8rem;
+    font-size: 0.8em;
+    width: 20em;
   }
   
   .tw-followCard-header{
     display: flex;
     align-items: center;
-    gap: 0.4rem
+    gap: 0.5em;
   }
   
   .tw-followCard-info{
@@ -23,18 +24,34 @@
   }
   
   .tw-followCard-avatar{
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 3.5em;
+    height: 3.5em;
     border-radius: 1000px;
   }
   
   .tw-followCard-button {
     cursor: pointer;
-    margin-left: 0.5rem;
+    margin-left: 0.5em;
     border: 0;
     border-radius: 1000px;
-    padding: 0.4rem 0.8rem;
+    padding: 0.4em 0.8em;
     font-weight: bold;
     border: 1px solid #000;
+    transition: .3s ease background-color;
+  }
+
+  .tw-followCard-button.is-following {
+    border: 1px solid darkred;
+    color: darkred;
+  }
+
+  .tw-followCard-button:hover {
+    background-color: rgb(181, 45, 133);
+    color:#fff;
+  }
+
+  .tw-followCard-button.is-following:hover {
+    background-color: darkred;
+    color:#fff;
   }
   
