--- a/projects/06_shopping-cart/src/App.css
+++ b/projects/06_shopping-cart/src/App.css
@@ -4,7 +4,7 @@ main {
   flex-direction: column;
   place-content: center;
   place-items: center;
-  width: 100%;
+  width: min(100%, 1200px);
   padding: 1rem 2rem;
   gap: 1rem;
 }
