--- a/projects/06_shopping-cart/src/components/Product/Product.css
+++ b/projects/06_shopping-cart/src/components/Product/Product.css
@@ -1,25 +1,25 @@
-.product {
-    display: flex;
-    flex-direction: column;
-    place-items: center;
-    gap: 1rem;
-    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 4px;
-    background: #111;
-    color: #fff;
-    padding: 1rem;
-  }
-  
-  .product h3 {
+article.product {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  gap: 1rem;
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  background: #111;
+  color: #fff;
+  padding: 1rem;
+  height: 100%;
+
+  h3 {
     margin: 0;
   }
-  
-  .product span {
+
+  span {
     font-size: 1rem;
     opacity: 0.9;
   }
-  
-  .product img {
+
+  img {
     border-radius: 4px;
     width: 100%;
     aspect-ratio: 16/9;
@@ -27,4 +27,4 @@
     object-fit: cover;
     background: #fff;
   }
-  
+}
