--- a/projects/06_shopping-cart/src/components/Footer/Footer.css
+++ b/projects/06_shopping-cart/src/components/Footer/Footer.css
@@ -1,4 +1,5 @@
 .footer {
+  text-shadow: 2px 2px 5px rgb(0, 0, 0);
   position: fixed;
   bottom: 0.5rem;
   left: 1rem;
@@ -12,11 +13,11 @@
   padding: 0.5rem 1.5rem;
   border-radius: 32px;
   opacity: 0.95;
-  backdrop-filter: blur(7px);
+  backdrop-filter: blur(5px);
 
   span {
     font-size: 14px;
-    color: #09f;
+    color: rgb(79, 229, 255);
     opacity: 0.8;
   }
 
