--- a/projects/06_shopping-cart/src/components/Header/Header.css
+++ b/projects/06_shopping-cart/src/components/Header/Header.css
@@ -1,9 +1,13 @@
 header {
-
+  position: sticky;
+  top: 0;
   display: flex;
   flex-direction: column;
   place-content: center;
   width: 100%;
+  backdrop-filter: blur(10px);
+  padding: 0.5rem;
+  text-shadow: 2px 2px 5px black;
   
   h1 {
     place-self: center;
